# epaper-converter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.agents/skills/epaper-real-device-preview/: SKILL.md
.agents/skills/epaper-real-device-preview/scripts/: show_on_device.py
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: algorithm-tuning.md
scripts/: build_skill.sh  convert_image_rust.py
skills/epaper-image-converter/: SKILL.md  test_when_ready.sh
skills/epaper-image-converter/scripts/: epaper_converter  show_on_screen.py
src/: cli.rs  lib.rs  main.rs  pipeline.rs  quantize.rs  tests.rs
src/cli/: args.rs  commands.rs  mod.rs
src/cli/commands/: benchmark.rs  check.rs  convert.rs  palette_report.rs
src/pipeline/: analyze.rs  mod.rs  output.rs  preprocess.rs  strategy.rs  validate.rs
src/quantize/: atkinson.rs  bayer.rs  blue_noise.rs  burkes.rs  clustered_dot.rs  color.rs  diffusion.rs  error_diffusion.rs  floyd_steinberg.rs  mod.rs  ordered.rs  palette.rs  yliluoma.rs
src/tests/: harness.rs  harness_tests.rs  mod.rs  unit.rs
src/tests/harness/: config.rs  mod.rs  model.rs  regression.rs  render.rs  report.rs
