[package]
name = "epaper_converter"
version = "1.0.0"
edition = "2021"
authors = ["vv314 <vv314@foxmail.com>"]
description = "High-performance image converter for Waveshare 7.3inch e-Paper E display"
license = "MIT"
readme = "README.md"
keywords = ["epaper", "image", "raspberry-pi", "waveshare", "converter"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
kamadak-exif = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
